--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 id="animated-text">Co11in</h1>
+        <h1 id="animated-text">Co11in BETA site</h1>
 
     </header>
 
